ci/e2e: replace 'number' by 'string' in workflow
This is to workaround this error:
```
Unexpected type of value '10', expected type: Number.
```

Looks like a GHA bug...

Signed-off-by: Loic Devulder <ldevulder@suse.com>

--- a/.github/workflows/e2e-obs-Stable.yaml
+++ b/.github/workflows/e2e-obs-Stable.yaml
@@ -7,7 +7,7 @@ on:
       node_number:
         description: Number of nodes (>3) to deploy on the provisioned cluster
         required: false
-        type: number
+        type: string
 
 concurrency:
   group: e2e-tests-obs-stable-${{ github.head_ref || github.ref }}-${{ github.repository }}
