--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -15,7 +15,6 @@ on:
         type: string
       iso_to_test:
         description: ISO to test (default built one is empty)
-        required: false
         type: string
       k8s_version_to_provision:
         description: Name and version of installed K8s distribution
@@ -23,19 +22,18 @@ on:
         type: string
       ca_type:
         description: CA type to use (selfsigned or private)
-        required: true
+        default: selfsigned
         type: string
       node_number:
         description: Number of nodes to deploy on the provisioned cluster
-        required: false
         type: string
       rancher_channel:
         description: Rancher Manager channel to use for installation (alpha/latest/stable)
-        required: true
+        default: stable
         type: string
       rancher_version:
         description: Rancher Manager version to use for installation (fixed version or latest)
-        required: true
+        default: latest
         type: string
       runner:
         description: Runner on which to execute tests
@@ -43,23 +41,22 @@ on:
         type: string
       start_condition:
         description: Start condition of the runner
-        required: true
+        default: success
         type: string
       test_type:
         description: Type of test to run (cli or ui)
-        required: true
+        default: cli
         type: string
       upgrade_operator:
         description: URL to elemental-operator version to upgrade to
-        required: false
         type: string
       zone:
         description: GCP zone to host the runner
-        required: true
+        default: us-central1-a
         type: string
       workflow_download:
         description: build-ci workflow to use for artifacts
-        required: false
+        default: build-ci.yaml
         type: string
 
 jobs:
